@@ -1456,6 +1456,28 @@ And thus, $\detname{B}=0$ when $x = 0$, $x = 2$, or $x = -4$.
 </solution>
 </exercise>
 
+<!-- X= matrix(QQ, [[-1, 3, 1, -2, 8], [-1, 3, 2, -1, 4], [2, -4, -3, 2, -7], [-2, 5, 3, -2, 8]]) -->
+<!-- Y= matrix(QQ, [[-1, 2, 2, 0, 0], [-3, 6, 8, -1, 1], [0, 1, -2, -2, 9], [-1, 4, -3, -3, 16]]) -->
+<exercise type="M" number="30" rough="PEEF for row-equivalence">
+<problem contributor="robertbeezer">The two matrices below are row-equivalent.  How would you confirm this?  Since the matrices are row-equivalent, there is a sequence of row operations that converts $X$ into $Y$, which would be a product of elementary matrices, $M$, such that $MX=Y$.  Find $M$. (This approach could be used to find the <q>9 scalars</q> of the very early <acroref type="exercise" acro="RREF.M40" />.)<br />
+Hint: Compute the extended echelon form for both matrices, and then use the property from <acroref type="theorem" acro="PEEF" />  that reads $B=JA$, where $A$ is the original matrix, $B$ is the echelon form of the matrix and $J$ is a nonsingular matrix obtained from extended echelon form.  Combine the two square matrices in the right way to obtain $M$.
+<alignmath><![CDATA[X&=\begin{bmatrix}
+-1 & 3 & 1 & -2 & 8 \\
+-1 & 3 & 2 & -1 & 4 \\
+2 & -4 & -3 & 2 & -7 \\
+-2 & 5 & 3 & -2 & 8
+\end{bmatrix}
+&
+Y&=\begin{bmatrix}
+-1 & 2 & 2 & 0 & 0 \\
+-3 & 6 & 8 & -1 & 1 \\
+0 & 1 & -2 & -2 & 9 \\
+-1 & 4 & -3 & -3 & 16
+\end{bmatrix}]]>
+</alignmath>
+</problem>
+</exercise>
+
 </exercisesubsection>
 
 </section>
