@@ -2,6 +2,7 @@ v3.xx 2013//
 ~~~~~~~~~~~~~~~~
 New: Exercise ILT.T10, solution added
 New: Section CNO, Theorems ZPCN, ZPZT about zero divisors
+New: Exercise DM.M30, row-equivalence and Theorem PEEF (suggested by Todd Pytel)
 Change: Bijection defined, never used (Anna Dovzhik)
 Edit: Clarified lead-in to Theorem PSSD (Michael DuBois)
 Edit: Example CAEHW, added an "and" (Anna Dovzhik)
